--- a/index.html
+++ b/index.html
@@ -30,18 +30,25 @@
 
     <!-- Navbar -->
     <nav class="fixed top-0 left-0 right-0 z-50 bg-gray-800/80 backdrop-blur-md shadow-md py-4">
-        <div class="container mx-auto flex justify-between items-center px-4">
-            <div class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-600 animate-fade-in">
-                Cris John Ramirez
-            </div>
-            <ul class="flex space-x-6 text-lg">
-                <li><a href="#about" class="hover:text-gray-400 transition">About</a></li>
-                <li><a href="#skills" class="hover:text-gray-400 transition">Skills</a></li>
-                <li><a href="#projects" class="hover:text-gray-400 transition">Projects</a></li>
-                <li><a href="#contact" class="hover:text-gray-400 transition">Contact</a></li>
-            </ul>
+    <div class="container mx-auto flex justify-between items-center px-4">
+        <div class="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-600 animate-fade-in">
+        Cris John Ramirez
         </div>
+        <ul class="flex space-x-6 text-lg items-center">
+        <li><a href="#about" class="hover:text-gray-400 transition">About</a></li>
+        <li><a href="#skills" class="hover:text-gray-400 transition">Skills</a></li>
+        <li><a href="#projects" class="hover:text-gray-400 transition">Projects</a></li>
+        <li><a href="#contact" class="hover:text-gray-400 transition">Contact</a></li>
+        <li>
+            <a href="CrisJohnRamirez.pdf" download
+            class="bg-gradient-to-r from-pink-500 to-purple-500 text-white px-4 py-2 rounded-full font-medium hover:scale-105 transform transition duration-300">
+            Download CV
+            </a>
+        </li>
+        </ul>
+    </div>
     </nav>
+
 
     <!-- Hero Section -->
     <section class="h-screen bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center text-center">
@@ -279,7 +286,7 @@
         </a>
 
         <!-- LinkedIn -->
-        <a href="www.linkedin.com/in/crisjohnramirez091299" target="_blank"
+        <a href="https://www.linkedin.com/in/crisjohnramirez091299" target="_blank"
         class="flex items-center gap-2 bg-blue-700 hover:bg-blue-800 text-white px-5 py-3 rounded-full shadow-lg transition-transform transform hover:scale-105">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.238-5 5v14c0 2.762 2.239 5 5 5h14c2.762 0 5-2.238 5-5v-14c0-2.762-2.238-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.3c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 11.3h-3v-5.604c0-1.337-.025-3.058-1.865-3.058-1.865 0-2.15 1.456-2.15 2.962v5.7h-3v-10h2.881v1.367h.041c.401-.758 1.38-1.557 2.84-1.557 3.037 0 3.6 1.998 3.6 4.598v5.592z"/></svg>
         LinkedIn
