--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
         <div class="relative rounded-xl shadow-2xl overflow-hidden border-4 border-pink-600 hover:scale-105 transform transition duration-500 mx-auto max-w-4xl aspect-video">
         <iframe 
             class="w-full h-full"
-            src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+            src="vid.mp4" 
             title="Featured Project Video" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -439,7 +439,7 @@
             <!-- Testimonial 1 -->
             <div class="w-full flex-shrink-0 px-8 py-12 text-white">
                 <h1 class="text-2xl font-bold mb-4">E-sinsilyo A Loose Vending Machine</h1>
-                <p class="text-lg italic mb-6">“Sir Cris John Ramirez is a talented developer who delivers high-quality work on time. His expertise in full-stack development made our project a success!”</p>
+                <p class="text-lg italic mb-6">“I am deeply grateful to Mr. Cris John Ramirez , whose guidance, support, and insight were invaluable throughout our thesis journey. He's expertise not only helped shape the direction of our work but also encouraged us to think critically and stay focused during challenging moments. With a patient and thoughtful approach, he consistently provided constructive feedback that strengthened both our writing and analytical skills. I truly appreciate he's dedication and commitment to our academic growth, and I could not have asked for a more supportive mentor.”</p>
                 <div class="flex items-center justify-center space-x-4">
                     <img src="dynes.webp" alt="Client 1" class="w-14 h-14 rounded-full object-cover border-2 border-pink-600 shadow-md" />
                     <div>
@@ -461,6 +461,28 @@
                 </div>
             </div>
             <!-- Testimonial 3 -->
+            <div class="w-full flex-shrink-0 px-8 py-12 text-white">
+                <h1 class="text-2xl font-bold mb-4">I.T. is Matched</h1>
+                <p class="text-lg italic mb-6">“Solid content, smooth, professional and well done system”</p>
+                <div class="flex items-center justify-center space-x-4">
+                    <img src="jc.jpg" alt="Client 1" class="w-14 h-14 rounded-full object-cover border-2 border-pink-600 shadow-md" />
+                    <div>
+                    <p class="font-bold text-pink-500">John Carlos M. Bellen</p>
+                    <p class="text-gray-400 text-sm">Client</p>
+                    </div>
+                </div>
+            </div>
+            <div class="w-full flex-shrink-0 px-8 py-12 text-white">
+                <h1 class="text-2xl font-bold mb-4">Brightpath</h1>
+                <p class="text-lg italic mb-6">“The system is being worked on and the programmer is very efficient and productive with his job”</p>
+                <div class="flex items-center justify-center space-x-4">
+                    <img src="jet.jpg" alt="Client 1" class="w-14 h-14 rounded-full object-cover border-2 border-pink-600 shadow-md" />
+                    <div>
+                    <p class="font-bold text-pink-500">Jethro barazona</p>
+                    <p class="text-gray-400 text-sm">Client</p>
+                    </div>
+                </div>
+            </div>
             
             </div>
         </div>
