--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">IT is Matched</h3>
             <p class="text-gray-300 mb-5">"It Is Matched" is a web-based system designed to help users find and connect with recommended IT professionals based on their needs. It offers features like chat, rating, and commenting, making it easier to discover and trust professionals in the field.</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://www.it-matched.site" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
