--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">Bright Path</h3>
             <p class="text-gray-300 mb-5">"Bright Path is a web app and mobile game app designed for teachers and students. The web app allows teachers to monitor students' game results and post games, which are then sent to the mobile app for each student to play."</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://brightpaths.space" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -226,7 +226,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">Water Level Monitoring System</h3>
             <p class="text-gray-300 mb-5">"Water Level Monitoring System – A system that detects the water level from the riverside using three levels: Normal, Moderate, and Hazardous. It sends alerts to residents when levels reach Moderate or Hazardous. The system also includes a web application that allows the MDRRMO to monitor real-time water levels and manage the list of registered residents who will receive the alerts."</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://water-level-facility.site" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -274,7 +274,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">Sensor Based parking system with Management system</h3>
             <p class="text-gray-300 mb-5">"Sensor-Based Parking System with Management System – A system that uses ultrasonic sensors to detect whether a parking slot is available or occupied. It includes a web application that monitors the entire parking area in real-time and displays the status of each parking slot, helping users and administrators manage parking efficiently."</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://parkingslot.site" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -291,7 +291,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">Query Assistance Management System</h3>
             <p class="text-gray-300 mb-5">"Query Assistance Management System – A system that uses voice recognition to allow citizens to speak their needs or concerns when visiting the municipal office. The system responds by providing guidance or directions tailored to their specific queries, helping streamline services and improve public assistance efficiency."</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://municipal-query-assistance.site" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -308,7 +308,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">Cemetery Management System</h3>
             <p class="text-gray-300 mb-5">"Cemetery Management System – A system that allows easy management and viewing of cemetery plots, enabling users to quickly locate specific graves. It also includes a notification feature to remind owners or relatives about tax payments related to their plots."</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://nsdsmp.site" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -372,7 +372,7 @@
             <div class="p-6 text-left relative z-10">
             <h3 class="text-2xl font-semibold text-white mb-3">Smart Bin with Management System</h3>
             <p class="text-gray-300 mb-5">Smart Bin with Management System – A system that detects whether a trash bin is full using sensors and controls a locking mechanism. It includes a web application to monitor all registered trash bins in each barangay, providing real-time notifications to trash truck drivers about bins that need to be emptied.</p>
-            <a href="#" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
+            <a href="https://smart-material-system.com" class="inline-flex items-center gap-2 px-6 py-2 rounded-full bg-pink-600 hover:bg-pink-700 text-white font-medium transition">
                 View Project
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
