--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         Cris John Ramirez
         </div>
         <ul class="flex space-x-6 text-lg items-center">
+<!--         <li><a href="https://" class="hover:text-gray-400 transition">Freelance</a></li> -->
         <li><a href="#about" class="hover:text-gray-400 transition">About</a></li>
         <li><a href="#skills" class="hover:text-gray-400 transition">Skills</a></li>
         <li><a href="#projects" class="hover:text-gray-400 transition">Projects</a></li>
