--- a/index.html
+++ b/index.html
@@ -104,19 +104,20 @@
 
     <!-- About Section -->
     <section id="about" class="py-20 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900">
-    <div class="container mx-auto px-6 max-w-4xl">
+      <div class="container mx-auto px-6 max-w-4xl">
         <div class="bg-gray-800 bg-opacity-80 rounded-xl shadow-xl p-10 text-center transform transition duration-700 hover:scale-[1.02]">
-        <h2 class="text-5xl font-extrabold text-white mb-4 tracking-wide relative inline-block">
+          <h2 class="text-5xl font-extrabold text-white mb-4 tracking-wide relative inline-block">
             About Me
             <span class="block w-20 h-1 bg-pink-600 mx-auto rounded-full mt-3"></span>
-        </h2>
-        <p class="mt-6 text-gray-300 text-lg leading-relaxed font-light tracking-wide">
-            I'm a full-stack developer with a deep love for coding and solving complex problems. With a focus on modern web technologies, I am passionate about building scalable, high-performance applications. 
-            I have strong proficiency in <span class="font-semibold text-pink-500">PHP Laravel</span>, which I use to craft robust and efficient backend systems.
-        </p>
+          </h2>
+          <p class="mt-6 text-gray-300 text-lg leading-relaxed font-light tracking-wide">
+            I'm a full-stack developer with a deep love for coding and solving complex problems. With a focus on modern web technologies, I am passionate about building scalable, high-performance applications.
+            I have strong proficiency in <span class="font-semibold text-pink-500">Next.js</span> and <span class="font-semibold text-pink-500">Express.js</span> for building fast, responsive web applications, along with <span class="font-semibold text-pink-500">Django</span> for creating robust and secure backend systems.
+          </p>
         </div>
-    </div>
+      </div>
     </section>
+
 
 
     <!-- Skills Section -->
